Connection to database updated